--- a/style.css
+++ b/style.css
@@ -5,11 +5,10 @@ body{
 
 h1{
     font-size: 50px;
-    color: rgb(85, 77, 77)
+    color: rgb(85, 77, 77);
 
 }
 
-}
 p{
     color: dimgray;
 
@@ -65,5 +64,48 @@ section{
     width: 100%;
     height: 60%;
     
+
+}
+.task-inquiry{
+    background-color: rgb(230, 243, 239);
+}
+.work-inquiry{
+    width:80%;
+    height: 40%;
+    float:left;
+    padding: 10px;
+    margin: 10%;
+    border-radius: 30px;
+    background-image: url("images/bg.png");
+    background-position: left;
+   
+   
+   
+
+}
+.white-highlight{
+    color: white;
+
+}
+
+.chat-button{
+    text-decoration:none;
+    background-image:linear-gradient(45deg,rgb(134, 209, 49), rgb(38, 139, 97));
+    padding: 10px 20px;
+    margin: 0px 80px 100px ; 
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+    float: right;
+
+}
+
+footer p{  
+    font-size: 24px;
+    text-align: center;
+}
+footer h3{
+    font-size: 24px;
+    text-align: center;
 
 }
